--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/react": "^2.1.0",
+    "@heroicons/react": "^2.1.4",
     "@next-auth/mongodb-adapter": "^1.1.3",
     "axios": "^1.7.2",
     "mongodb": "^5.9.2",
