--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "mongoose": "^8.4.3",
     "next": "14.2.4",
     "next-auth": "^4.24.7",
+    "openai": "^4.52.1",
     "react": "^18",
     "react-dom": "^18"
   },
