--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.606.0",
     "@headlessui/react": "^2.1.0",
     "@heroicons/react": "^2.1.4",
     "@next-auth/mongodb-adapter": "^1.1.3",
