--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,6 @@
 {
     "functions": {
-        "pages/api/**/*": {
+        "src/pages/api/**/*": {
             "maxDuration": 60
         }
     }
