--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "next": "14.2.4",
     "next-auth": "^4.24.7",
     "openai": "^4.52.1",
+    "pluralize": "^8.0.0",
     "react": "^18",
     "react-dom": "^18",
     "uuid": "^10.0.0"
@@ -27,6 +28,7 @@
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.7",
     "@types/node": "^20",
+    "@types/pluralize": "^0.0.33",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@types/uuid": "^10.0.0",
