--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.606.0",
-    "@headlessui/react": "^2.1.0",
+    "@headlessui/react": "^0.0.0-insiders.557c103",
     "@heroicons/react": "^2.1.4",
     "@next-auth/mongodb-adapter": "^1.1.3",
     "axios": "^1.7.2",
