--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "eslint-config-next": "14.2.4",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
+    "node-mocks-http": "^1.15.0",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "ts-node": "^10.9.2",
