--- a/package.json
+++ b/package.json
@@ -38,10 +38,12 @@
     "@types/react-dom": "^18",
     "@types/uuid": "^10.0.0",
     "autoprefixer": "^10.4.19",
+    "aws-sdk-client-mock": "^4.0.1",
     "eslint": "^8",
     "eslint-config-next": "14.2.4",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
+    "nock": "^13.2.2",
     "node-mocks-http": "^1.15.0",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
