--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "axios": "^1.7.2",
     "mongodb": "^5.9.2",
     "mongoose": "^8.4.3",
-    "next": "14.2.4",
+    "next": "^14.2.20",
     "next-auth": "^4.24.7",
     "openai": "^4.52.1",
     "pluralize": "^8.0.0",
