--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "pluralize": "^8.0.0",
     "react": "^18",
     "react-dom": "^18",
+    "react-markdown": "^10.1.0",
     "uuid": "^10.0.0"
   },
   "devDependencies": {
