--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,6 +18,10 @@
     "isolatedModules": true,
     "jsx": "preserve",
     "incremental": true,
+    "types": [
+      "jest",
+      "node"
+    ],
     "typeRoots": [
       "./node_modules/@types",
       "./global.d.ts"
