--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "compileTS": "npx tsc --noEmit",
     "test": "jest --watch",
     "coverage": "jest --coverage",
-    "all_tests": "cross-env NODE_ENV=test jest"
+    "all_tests": "cross-env NODE_ENV=test jest",
+    "e2e": "cypress open",
+    "e2e:run": "cypress run"
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.606.0",
@@ -38,10 +40,12 @@
     "@types/pluralize": "^0.0.33",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/testing-library__jest-dom": "^5.14.9",
     "@types/uuid": "^10.0.0",
     "autoprefixer": "^10.4.19",
     "aws-sdk-client-mock": "^4.0.1",
     "cross-env": "^7.0.3",
+    "cypress": "^14.4.1",
     "eslint": "^8",
     "eslint-config-next": "14.2.4",
     "jest": "^29.7.0",
