--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "compileTS": "npx tsc --noEmit",
+    "compileTS": "npx tsc --noEmit && npx tsc --project cypress/tsconfig.json",
     "test": "jest --watch",
     "coverage": "jest --coverage",
     "all_tests": "cross-env NODE_ENV=test jest"
@@ -42,6 +42,7 @@
     "autoprefixer": "^10.4.19",
     "aws-sdk-client-mock": "^4.0.1",
     "cross-env": "^7.0.3",
+    "cypress": "^14.4.1",
     "eslint": "^8",
     "eslint-config-next": "14.2.4",
     "jest": "^29.7.0",
