Fix: Restore full test and compile compatibility post-Cypress integration
- Fixed global type definition for MongoDB client to resolve TS7017 errors
- Adjusted ingredient selection logic in CreateRecipe.test.tsx for compatibility with updated UI event handling
- Replaced `fireEvent.mouseDown` with `fireEvent.click` to ensure ingredient assertions pass
- Confirmed clean reinstall, compile, unit test, and Cypress run all pass

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,7 +20,7 @@
     "incremental": true,
     "types": [
       "jest",
-      "node"
+      "node",
     ],
     "typeRoots": [
       "./node_modules/@types",
@@ -34,8 +34,9 @@
   },
   "include": [
     "next-env.d.ts",
-    "**/*.ts",
-    "**/*.tsx",
+    "global.d.ts",
+    "src/**/*",
+    "tests/**/*",
     ".next/types/**/*.ts"
   ],
   "exclude": [
