--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@heroicons/react": "^2.2.0",
     "@next-auth/mongodb-adapter": "^1.1.3",
     "axios": "^1.7.2",
+    "cookies-next": "^4.1.1",
     "mongodb": "^5.9.2",
     "mongoose": "^8.4.3",
     "next": "^14.2.20",
