--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -20,6 +20,7 @@ jobs:
         run: |
           npm install -g vercel
           vercel pull --yes --token ${{ secrets.VERCEL_TOKEN }}
+          vercel build
           URL=$(vercel deploy --token ${{ secrets.VERCEL_TOKEN }} --prebuilt)
           echo "preview_url=${URL}" >> $GITHUB_OUTPUT
 
