--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -1,4 +1,4 @@
-name: E2E Tests on Vercel Preview
+name: E2E Tests (Local Dev Server)
 
 on:
   push:
@@ -15,23 +15,5 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
-      - name: Get Vercel preview URL
-        id: vercel
-        run: |
-          npm install -g vercel
-          vercel pull --yes --token ${{ secrets.VERCEL_TOKEN }}
-          vercel build
-          URL=$(vercel deploy --token ${{ secrets.VERCEL_TOKEN }} --prebuilt)
-          echo "preview_url=${URL}" >> $GITHUB_OUTPUT
-
-      - name: Wait for preview to become live
-        run: |
-          echo "Waiting for ${{ steps.vercel.outputs.preview_url }}"
-          npx wait-on "${{ steps.vercel.outputs.preview_url }}favicon.ico" --timeout 10000
-
-      - name: Run Cypress tests
-        uses: cypress-io/github-action@v6
-        with:
-          start: echo "Vercel already deployed"
-          wait-on: ''
-          config: baseUrl=${{ steps.vercel.outputs.preview_url }}
+      - name: Run Cypress E2E tests locally
+        run: npm run test:e2e
