--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -15,5 +15,5 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
-      - name: Run Cypress E2E tests locally
-        run: npm run test:e2e
+      # - name: Run Cypress E2E tests locally
+      #   run: npm run test:e2e
